// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommunityRow handles high member count and moderator role 1`] = `
<View>
  <StarIcon />
  <TouchableOpacity
    activeOpacity={0.2}
    disabled={undefined}
    focusedOpacity={0.7}
    onPress={[Function]}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      Greater Place
    </Text>
  </TouchableOpacity>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
  >
    24.5k
  </Text>
  <Icon
    name="Members"
  />
</View>
`;

exports[`CommunityRow matches the last snapshot 1`] = `
<View>
  <TouchableOpacity
    activeOpacity={0.2}
    disabled={undefined}
    focusedOpacity={0.7}
    onPress={[Function]}
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      Great Place
    </Text>
  </TouchableOpacity>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
  >
    432
  </Text>
  <Icon
    name="Members"
  />
</View>
`;

exports[`MemberBio matches the last snapshot 1`] = `
<View>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      About Me
    </Text>
  </View>
  <Control
    editable={undefined}
    hideEditIcon={true}
    multiline={true}
    onChangeText={[Function]}
    value="I live I die!"
  />
</View>
`;

exports[`MemberCommunities matches the last snapshot 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
  >
    My Hylo Communities
  </Text>
  <CommunityRow
    editing={undefined}
    goToCommunity={undefined}
    membership={
      Object {
        "id": 1,
      }
    }
  />
  <CommunityRow
    editing={undefined}
    goToCommunity={undefined}
    membership={
      Object {
        "id": 2,
      }
    }
  />
  <CommunityRow
    editing={undefined}
    goToCommunity={undefined}
    membership={
      Object {
        "id": 3,
      }
    }
  />
</View>
`;

exports[`MemberDetails has navigation options 1`] = `
Object {
  "headerBackTitle": null,
  "headerLeft": <HeaderBackButton
    onPress={[Function]}
    pressColorAndroid="rgba(0, 0, 0, .32)"
    tintColor="#808c9b"
    truncatedTitle="Back"
/>,
  "headerStyle": Object {
    "backgroundColor": "white",
    "paddingHorizontal": 10,
  },
  "headerTintColor": "#808c9b",
  "headerTitle": "About This Member",
  "headerTitleStyle": Object {
    "color": "black",
    "fontFamily": "Circular-Bold",
    "fontSize": 17,
    "marginLeft": 15,
  },
}
`;

exports[`MemberDetails matches the last snapshot 1`] = `<Loading />`;

exports[`MemberDetails returns Loading when there's no person 1`] = `<Loading />`;

exports[`MemberSkills matches the last snapshot 1`] = `
<View>
  <View>
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
    >
      My Skills
    </Text>
  </View>
  <TouchableOpacity
    activeOpacity={0.2}
    disabled={true}
    focusedOpacity={0.7}
    onPress={undefined}
  >
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        RUN
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        ALL
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        DAY
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;
